# spark-naka

./: .gitignore  .sbtopts  .scalafmt.conf  build.sbt  readme.md
data/: readme.md
data/E1/: E1-25.csv
data/matches.parquet/: .part-00000-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet.crc  .part-00001-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet.crc  .part-00002-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet.crc  .part-00003-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet.crc  .part-00004-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet.crc  .part-00005-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet.crc  .part-00006-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet.crc  .part-00007-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet.crc  part-00000-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet  part-00001-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet  part-00002-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet  part-00003-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet  part-00004-ccb4c601-aecc-4c14-bf60-b81ba499e53d-c000.snappy.parquet  (+3 more)
panama/: .clang-format  .clang-tidy  .clangd  .gitignore  Makefile.am  configure.ac
panama/fast/: Makefile.am
panama/fast/include/: parse_iso8601.h
panama/fast/include/fast/: fast.h
panama/fast/src/: parse_iso8601.cpp  timestamp.cpp
panama/naka/: Makefile.am
panama/naka/include/naka/: batch.h  naka.h
panama/naka/src/: epoch.cpp
project/: PanamaBuild.scala  plugins.sbt
scripts/: data.py
(+28 files in other folders)
